# Simulated-Annealing

./: LICENSE  README.md  main.py  pyproject.toml
notebooks/: 01_introduction.ipynb  02_loss_landscapes.ipynb  03_sa_deep_dive.ipynb  04_comparison.ipynb  05_constraints.ipynb
simulated_annealing/: CostFunction.py  Initialise.py  NeighbourhoodFunction.py  TemperatureFunction.py  __init__.py  types.py  utils.py
simulated_annealing/constraints/: __init__.py  handler.py
simulated_annealing/core/: annealer.py  base_optimizer.py  stochastic_annealer.py
simulated_annealing/landscapes/: __init__.py  functions.py
simulated_annealing/neighbours/: __init__.py  perturbation.py
simulated_annealing/optimizers/: __init__.py  gradient_descent.py  random_search.py
simulated_annealing/schedules/: __init__.py  cooling.py
simulated_annealing/utils/: __init__.py  metrics.py  visualization.py
tests/: test_annealer.py  test_constraints.py  test_landscapes.py  test_optimizers.py  test_perturbation.py  test_schedules.py  test_stochastic_annealer.py  test_types.py
